@startuml
title Entity Relationship Diagram - Part 2 of 6 - Jobs & Bidding
skinparam dpi 180
skinparam linetype ortho
skinparam defaultFontName Arial
skinparam defaultFontSize 15
skinparam classFontSize 17
skinparam classAttributeFontSize 15
skinparam classHeaderFontSize 17
skinparam arrowFontSize 14
skinparam nodesep 50
skinparam ranksep 55
hide circle

entity "users" as users {
  * userId : string <<PK>>
  --
  * email : string
  * userType : string
  fullName : string
}

entity "jobs" as jobs {
  * jobId : string <<PK>>
  --
  * clientId : string <<FK users>>
  clientName : string
  clientPhotoUrl : string
  * title : string
  description : string
  * category : string
  * budget : number
  timeline : string
  location : string
  * status : string
  postedDate : bigint
  startDate : bigint
  completedDate : bigint
  totalBids : int
  acceptedBidId : string <<FK bids>>
  acceptedBidAmount : number
  assignedContractorId : string <<FK users>>
  assignedContractorName : string
  attachments : array
  depositPaid : boolean
  finalPaid : boolean
  paymentVerified : boolean
}

entity "bids" as bids {
  * bidId : string <<PK>>
  --
  * jobId : string <<FK jobs>>
  jobTitle : string
  * contractorId : string <<FK users>>
  contractorName : string
  contractorPhotoUrl : string
  contractorCategory : string
  contractorRating : number
  contractorCompletedProjects : int
  * bidAmount : number
  * completionDays : int
  proposal : string
  * status : string
  portfolioImages : array
  submittedDate : bigint
}


users ||--o{ jobs : "posts (client)"
users ||--o{ jobs : "assigned (contractor)"
jobs ||--o{ bids : "attracts"
users ||--o{ bids : "submits"
jobs |o--o| bids : "accepts"

@enduml
